--- a/AutoSearch.Web/src/app/search/search.component.html
+++ b/AutoSearch.Web/src/app/search/search.component.html
@@ -1,15 +1,30 @@
-<main class="w-100 m-auto text-center">
-  <div class="row">
-    <div class="col-2"></div>
+<main class="w-100 m-auto text-center" >
+  <div>
+  <div class="row justify-content-center">
     <div class="col-6 ">
       <div class="form-floating">
         <input #keywords class="form-control" id="floatingInput" placeholder="">
         <label for="floatingInput">Please enter keywords</label>
       </div>
 
+      <div class="text-center"  *ngIf="isSearched" style="margin: 20px 0px 20px 0px ">
+        <h3>
+          Successfully searched for '{{keywords.value}}'!
+          
+            <div *ngIf="results.length > 0;else notFound">
+              Results position(s): <b>{{results}}</b>
+            </div>
+            <ng-template #notFound>
+              could not found in top 100 results.
+            </ng-template>
+        </h3>
+      </div>
+
       <button class="w-50 btn btn-lg btn-primary" style="margin: 10px" (click)="search( keywords.value)" type="submit">Search</button>
 
     </div>
-    <div class="col-2"></div>
   </div>
+
+ 
+    </div>
 </main>
